-

    New feature: Added new method called getReportIssues() that takes
    the id of the report as an only parameter and it returns all the 
    issues that report would find.

    New feature: Search result highlighting can be switched off with a
    Javascript-created link similar to Gmail.

    Bug fixed: Encoded email address in a autorefresh are re-encoded.

    Bug fixed: Possible UnicodeDecodeError if using normal acl_users
    user folder with a unicode fromname.

    New feature: File attachments initially hidden and covered with a
    Javascript opener.

    New feature: Change assignment form expands automatically on focus.

    Bug fixed: Filter switcher ("Do only show"/"Do not show") had a
    Javascript error on a missing variable called 'label'.

    New feature: Ability to disable "Show them all" as a batching
    option. Very useful when there are many issues because showing this
    page will slow your Zope down.

    Bug fixed: Name hidden wasn't hidden on home page.

    New feature: List of issues on home page periodically refreshed
    with AJAX.

    Bug fixed: Download of dodgy emails without a To: part now skipped
    (Real#0700, thanks Jesse Perry)

    New feature: File attachment links have a rel="nofollow" now.

    New feature: Ability to hook up pre- and post scripts that are
    called before and after issues are submitted.
    http://www.issuetrackerproduct.com/Documentation/How-Tos/pre-post-SubmitIssue

    Bug fixed: Confidential issues could be seen by logged in people
    by changing their email address to an email address of someone else.
    (Real#0696, thanks NiBar)

    Bug fixed: Keyboard shortcut for comparing issues changed from 'c'
    to 'g'+'d' since the 'c' cause interference with Ctrl-C for copying.
    (Real#0697, thanks Jesse Perry)

    New feature: Skipped notifications when not dispatching on submit.
    Means that if you let a cronjob send the notifications instead of